[tool.poetry]
name = "file-hash-cache"
version = "0.1.0"
description = ""
authors = ["OhkuboSGMS <sinikake.gokiburi@gmail.com>"]
readme = "README.md"
packages = [{include = "file_hash_cache"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
